# ananke_dr3

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  apply_gmag_cut.py  calculate_properties.py  config.ini  convert_ebf_to_hdf5.py  fix_astrometric.py  fix_photometric_errors.py  fix_rv.py  make_catalog.py  make_catalog_parallel.py  pyproject.toml  requirements.txt  selection_function_ruwe.py  setup.cfg  setup.py  write_slurm.py  write_slurm_fix_astrometric.py  write_slurm_fix_photo.py  write_slurm_fix_rv.py
ananke/: '  conversion.py  coordinates.py  ebf_conversion.py  envs.py  errors.py  extinction.py  flags.py  io.py  selection.py
ananke/data/: nodustWD_mass_bound_valid.csv
ananke/errors/: astrometric.py  photometric.py  spectroscopic.py
ananke/scripts/: calc_props.py  ebf_to_hdf5.py  gmag_cut.py  rotate_coords.py  selection_function.py  split_hdf5.py
ananke/selectionfunction/: selection_function_ruwe.py
plot_scripts/: plot_Toomre.py  plot_cmd.py  plot_coordinates_dist.py
scripts/: calc_props.py  gmag_cut.py  make_catalog.py  rotate_coords.py  write_make_catalog_parallel.py
src/ananke/: config.ini  config.py  coordinates.py  extinction.py  io.py  logger.py  photometric_utils.py
src/ananke/errors/: __init__.py  photometric.py
test/: plot_Toomre.py  plot_cmd.py  plot_coordinates_dist.py  utils.py
