[metadata]
name = ananke
version = 1.0.0
author = Tri Nguyen
author_email = tnguy@mit.edu
description = Converting Latte mock catalog into the Ananke DR3 synthetic surveys
url = https://github.com/trivnguyen/ananke_dr3/
license = MIT
license_file = LICENSE.md

[options]
packages = find:
package_dir =
    = src
install_requires =
    # List your requirements here
    astropy
    h5py
    numba
    numpy
    pandas
    pygaia
    scipy
    tqdm

[options.package_data]
ananke = config.ini
ananke.errors = *.csv

[options.packages.find]
where = src
include_package_data=True

[options.entry_points]
console_scripts =
    ananke-make-catalog = ananke.bin.make_catalog:main
